objects/Case_Management__c/Case_Management__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Manage settings for case management.</description>
    <label>Case Management</label>
</CustomObject>