objects/Case_Management__c/fields/Customer_Community_URL__c.field-meta.xml
<CustomField>
    <fullName>Customer_Community_URL__c</fullName>
    <description>URL of the community to be used in email templates. Update for sandbox and production.</description>
    <label>Customer Community URL</label>
    <type>Url</type>
</CustomField>