objects/Case_Management__c/fields/fromNumber__c.field-meta.xml
<CustomField>
    <fullName>fromNumber__c</fullName>
    <description>from Number in Rosco Coverage</description>
    <inlineHelpText>from Number in Rosco Coverage</inlineHelpText>
    <label>fromNumber</label>
    <length>100</length>
    <type>Text</type>
</CustomField>