objects/Case_Management__c/fields/rosco__c.field-meta.xml
<CustomField>
    <fullName>rosco__c</fullName>
    <label>rosco_dupchar</label>
    <length>10</length>
    <type>Text</type>
</CustomField>