objects/Case_Management__c/fields/rosco_accountcasepopup__c.field-meta.xml
<CustomField>
    <fullName>rosco_accountcasepopup__c</fullName>
    <label>rosco_accountcasepopup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>