objects/Case_Management__c/fields/rosco_attURL__c.field-meta.xml
<CustomField>
    <fullName>rosco_attURL__c</fullName>
    <label>rosco_attURL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>