objects/Case_Management__c/fields/rosco_case_accountid__c.field-meta.xml
<CustomField>
    <fullName>rosco_case_accountid__c</fullName>
    <description>Default Account if not determined at runtime</description>
    <label>rosco_case_accountid</label>
    <length>18</length>
    <type>Text</type>
</CustomField>