objects/Case_Management__c/fields/rosco_case_country_routing_accountIds__c.field-meta.xml
<CustomField>
    <fullName>rosco_case_country_routing_accountIds__c</fullName>
    <label>rosco_case_country_routing_accountIds</label>
    <length>255</length>
    <type>Text</type>
</CustomField>