objects/Case_Management__c/fields/rosco_case_defaultcontact__c.field-meta.xml
<CustomField>
    <fullName>rosco_case_defaultcontact__c</fullName>
    <label>rosco_case_defaultcontact</label>
    <length>32</length>
    <type>Text</type>
</CustomField>