objects/Case_Management__c/fields/rosco_case_escalation_level_1__c.field-meta.xml
<CustomField>
    <fullName>rosco_case_escalation_level_1__c</fullName>
    <label>rosco_case_escalation_level_1</label>
    <length>10</length>
    <type>Text</type>
</CustomField>