objects/Case_Management__c/fields/rosco_case_hfpoc_accountid__c.field-meta.xml
<CustomField>
    <fullName>rosco_case_hfpoc_accountid__c</fullName>
    <label>rosco_case_hfpoc_accountid</label>
    <length>18</length>
    <type>Text</type>
</CustomField>