objects/Case_Management__c/fields/rosco_case_hfpoc_contactid__c.field-meta.xml
<CustomField>
    <fullName>rosco_case_hfpoc_contactid__c</fullName>
    <label>rosco_case_hfpoc_contactid</label>
    <length>18</length>
    <type>Text</type>
</CustomField>