objects/Case_Management__c/fields/rosco_case_recordtypeid__c.field-meta.xml
<CustomField>
    <fullName>rosco_case_recordtypeid__c</fullName>
    <label>rosco_case_recordtypeid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>