objects/Case_Management__c/fields/rosco_case_sc_japan_email__c.field-meta.xml
<CustomField>
    <fullName>rosco_case_sc_japan_email__c</fullName>
    <label>rosco_case_sc_japan_email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>