objects/Case_Management__c/fields/rosco_case_status__c.field-meta.xml
<CustomField>
    <fullName>rosco_case_status__c</fullName>
    <label>rosco_case_status</label>
    <length>64</length>
    <type>Text</type>
</CustomField>