objects/Case_Management__c/fields/rosco_case_url_prefix__c.field-meta.xml
<CustomField>
    <fullName>rosco_case_url_prefix__c</fullName>
    <label>rosco_case_url_prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>