objects/Case_Management__c/fields/rosco_check_auth__c.field-meta.xml
<CustomField>
    <fullName>rosco_check_auth__c</fullName>
    <label>rosco_check_auth</label>
    <length>10</length>
    <type>Text</type>
</CustomField>