objects/Case_Management__c/fields/rosco_check_mail_api__c.field-meta.xml
<CustomField>
    <fullName>rosco_check_mail_api__c</fullName>
    <label>rosco_check_mail_api</label>
    <length>15</length>
    <type>Text</type>
</CustomField>