objects/Case_Management__c/fields/rosco_chronicle_refid_re__c.field-meta.xml
<CustomField>
    <fullName>rosco_chronicle_refid_re__c</fullName>
    <label>rosco_chronicle_refid_re</label>
    <length>255</length>
    <type>Text</type>
</CustomField>