objects/Case_Management__c/fields/rosco_chronicle_support_address__c.field-meta.xml
<CustomField>
    <fullName>rosco_chronicle_support_address__c</fullName>
    <label>rosco_chronicle_support_address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>