objects/Case_Management__c/fields/rosco_cmty_esc_channel__c.field-meta.xml
<CustomField>
    <fullName>rosco_cmty_esc_channel__c</fullName>
    <label>rosco_cmty_esc_channel</label>
    <length>15</length>
    <type>Text</type>
</CustomField>