objects/Case_Management__c/fields/rosco_cmty_esc_grace_day__c.field-meta.xml
<CustomField>
    <fullName>rosco_cmty_esc_grace_day__c</fullName>
    <label>rosco_cmty_esc_grace_day</label>
    <length>10</length>
    <type>Text</type>
</CustomField>