objects/Case_Management__c/fields/rosco_cmty_esc_require_best_comment__c.field-meta.xml
<CustomField>
    <fullName>rosco_cmty_esc_require_best_comment__c</fullName>
    <label>rosco_cmty_esc_require_best_comment</label>
    <length>10</length>
    <type>Text</type>
</CustomField>