objects/Case_Management__c/fields/rosco_cmty_show_partner_account__c.field-meta.xml
<CustomField>
    <fullName>rosco_cmty_show_partner_account__c</fullName>
    <label>rosco_cmty_show_partner_account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>