objects/Case_Management__c/fields/rosco_cmty_topicids__c.field-meta.xml
<CustomField>
    <fullName>rosco_cmty_topicids__c</fullName>
    <label>rosco_cmty_topicids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>