objects/Case_Management__c/fields/rosco_contactid_exclusion__c.field-meta.xml
<CustomField>
    <fullName>rosco_contactid_exclusion__c</fullName>
    <label>rosco_contactid_exclusion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>