objects/Case_Management__c/fields/rosco_count_agent_post_as_response__c.field-meta.xml
<CustomField>
    <fullName>rosco_count_agent_post_as_response__c</fullName>
    <label>rosco_count_agent_post_as_response</label>
    <length>10</length>
    <type>Text</type>
</CustomField>