objects/Case_Management__c/fields/rosco_create_contact_case_roles__c.field-meta.xml
<CustomField>
    <fullName>rosco_create_contact_case_roles__c</fullName>
    <label>rosco_create_contact_case_roles</label>
    <length>10</length>
    <type>Text</type>
</CustomField>