objects/Case_Management__c/fields/rosco_create_contacts__c.field-meta.xml
<CustomField>
    <fullName>rosco_create_contacts__c</fullName>
    <label>rosco_create_contacts</label>
    <length>10</length>
    <type>Text</type>
</CustomField>