objects/Case_Management__c/fields/rosco_dup_check_multiple_account_limit__c.field-meta.xml
<CustomField>
    <fullName>rosco_dup_check_multiple_account_limit__c</fullName>
    <label>rosco_dup_check_multiple_account_limit</label>
    <length>10</length>
    <type>Text</type>
</CustomField>