objects/Case_Management__c/fields/rosco_email_apex__c.field-meta.xml
<CustomField>
    <fullName>rosco_email_apex__c</fullName>
    <label>rosco_email_apex</label>
    <length>32</length>
    <type>Text</type>
</CustomField>