objects/Case_Management__c/fields/rosco_email_handler_userid__c.field-meta.xml
<CustomField>
    <fullName>rosco_email_handler_userid__c</fullName>
    <label>rosco_email_handler_userid</label>
    <length>20</length>
    <type>Text</type>
</CustomField>