objects/Case_Management__c/fields/rosco_email_publisher__c.field-meta.xml
<CustomField>
    <fullName>rosco_email_publisher__c</fullName>
    <label>rosco_email_publisher</label>
    <length>10</length>
    <type>Text</type>
</CustomField>