objects/Case_Management__c/fields/rosco_ES_CSAT_slackid__c.field-meta.xml
<CustomField>
    <fullName>rosco_ES_CSAT_slackid__c</fullName>
    <label>rosco_ES_CSAT__slackid</label>
    <length>32</length>
    <type>Text</type>
</CustomField>