objects/Case_Management__c/fields/rosco_esc_all_sme_level_2__c.field-meta.xml
<CustomField>
    <fullName>rosco_esc_all_sme_level_2__c</fullName>
    <label>rosco_esc_all_sme_level_2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>