objects/Case_Management__c/fields/rosco_esc_all_sme_level_3__c.field-meta.xml
<CustomField>
    <fullName>rosco_esc_all_sme_level_3__c</fullName>
    <label>rosco_esc_all_sme_level_3</label>
    <length>10</length>
    <type>Text</type>
</CustomField>