objects/Case_Management__c/fields/rosco_exclude_account__c.field-meta.xml
<CustomField>
    <fullName>rosco_exclude_account__c</fullName>
    <description>exclude accounts from matching incoming mail such as Tanium, Community, 3 Monkeys</description>
    <label>rosco_exclude_account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>