objects/Case_Management__c/fields/rosco_ftam_slackId__c.field-meta.xml
<CustomField>
    <fullName>rosco_ftam_slackId__c</fullName>
    <label>rosco_ftam_slackId</label>
    <length>32</length>
    <type>Text</type>
</CustomField>