objects/Case_Management__c/fields/rosco_include_owner_survey_email__c.field-meta.xml
<CustomField>
    <fullName>rosco_include_owner_survey_email__c</fullName>
    <label>rosco_include_owner_survey_email</label>
    <length>20</length>
    <type>Text</type>
</CustomField>