objects/Case_Management__c/fields/rosco_msg_after_hour__c.field-meta.xml
<CustomField>
    <fullName>rosco_msg_after_hour__c</fullName>
    <label>rosco_msg_after_hour</label>
    <length>10</length>
    <type>Text</type>
</CustomField>