objects/Case_Management__c/fields/rosco_msg_after_hour_re__c.field-meta.xml
<CustomField>
    <fullName>rosco_msg_after_hour_re__c</fullName>
    <label>rosco_msg_after_hour_re</label>
    <length>64</length>
    <type>Text</type>
</CustomField>