objects/Case_Management__c/fields/rosco_msg_debug__c.field-meta.xml
<CustomField>
    <fullName>rosco_msg_debug__c</fullName>
    <label>rosco_msg_debug</label>
    <length>10</length>
    <type>Text</type>
</CustomField>