objects/Case_Management__c/fields/rosco_msg_missing_case_contacts__c.field-meta.xml
<CustomField>
    <fullName>rosco_msg_missing_case_contacts__c</fullName>
    <label>rosco_msg_missing_case_contacts</label>
    <length>10</length>
    <type>Text</type>
</CustomField>