objects/Case_Management__c/fields/rosco_msg_unauthenticated__c.field-meta.xml
<CustomField>
    <fullName>rosco_msg_unauthenticated__c</fullName>
    <label>rosco_msg_unauthenticated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>