objects/Case_Management__c/fields/rosco_nag_mail_limit_accountids__c.field-meta.xml
<CustomField>
    <fullName>rosco_nag_mail_limit_accountids__c</fullName>
    <label>rosco_nag_mail_limit_accountids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>