objects/Case_Management__c/fields/rosco_nag_mail_limit_case_count__c.field-meta.xml
<CustomField>
    <fullName>rosco_nag_mail_limit_case_count__c</fullName>
    <label>rosco_nag_mail_limit_case_count</label>
    <length>10</length>
    <type>Text</type>
</CustomField>