objects/Case_Management__c/fields/rosco_nag_mail_test_mode__c.field-meta.xml
<CustomField>
    <fullName>rosco_nag_mail_test_mode__c</fullName>
    <label>rosco_nag_mail_test_mode</label>
    <length>32</length>
    <type>Text</type>
</CustomField>