objects/Case_Management__c/fields/rosco_notify_tanowneroption__c.field-meta.xml
<CustomField>
    <fullName>rosco_notify_tanowneroption__c</fullName>
    <label>rosco_notify_tanowneroption</label>
    <length>10</length>
    <type>Text</type>
</CustomField>