objects/Case_Management__c/fields/rosco_omni_roundrobin_exclude_member__c.field-meta.xml
<CustomField>
    <fullName>rosco_omni_roundrobin_exclude_member__c</fullName>
    <label>rosco_omni_roundrobin_exclude_member</label>
    <length>255</length>
    <type>Text</type>
</CustomField>