objects/Case_Management__c/fields/rosco_omni_roundrobin_online_only__c.field-meta.xml
<CustomField>
    <fullName>rosco_omni_roundrobin_online_only__c</fullName>
    <label>rosco_omni_roundrobin_online_only</label>
    <length>10</length>
    <type>Text</type>
</CustomField>