objects/Case_Management__c/fields/rosco_onboard_survey_email__c.field-meta.xml
<CustomField>
    <fullName>rosco_onboard_survey_email__c</fullName>
    <label>rosco_onboard_survey_email</label>
    <length>32</length>
    <type>Text</type>
</CustomField>