objects/Case_Management__c/fields/rosco_owea__c.field-meta.xml
<CustomField>
    <fullName>rosco_owea__c</fullName>
    <label>rosco_owea</label>
    <length>20</length>
    <type>Text</type>
</CustomField>