objects/Case_Management__c/fields/rosco_owea_noreply__c.field-meta.xml
<CustomField>
    <fullName>rosco_owea_noreply__c</fullName>
    <label>rosco_owea_noreply</label>
    <length>20</length>
    <type>Text</type>
</CustomField>