objects/Case_Management__c/fields/rosco_page_always__c.field-meta.xml
<CustomField>
    <fullName>rosco_page_always__c</fullName>
    <label>rosco_page_always</label>
    <length>255</length>
    <type>Text</type>
</CustomField>