objects/Case_Management__c/fields/rosco_retrycase__c.field-meta.xml
<CustomField>
    <fullName>rosco_retrycase__c</fullName>
    <label>rosco_retrycase</label>
    <length>20</length>
    <type>Text</type>
</CustomField>