objects/Case_Management__c/fields/rosco_SC_CSAT_email__c.field-meta.xml
<CustomField>
    <fullName>rosco_SC_CSAT_email__c</fullName>
    <label>rosco_SC_CSAT_email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>