objects/Case_Management__c/fields/rosco_sc_email__c.field-meta.xml
<CustomField>
    <fullName>rosco_sc_email__c</fullName>
    <label>rosco_sc_email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>