objects/Case_Management__c/fields/rosco_sc_japan_queue__c.field-meta.xml
<CustomField>
    <fullName>rosco_sc_japan_queue__c</fullName>
    <label>rosco_sc_japan_queue</label>
    <length>20</length>
    <type>Text</type>
</CustomField>