objects/Case_Management__c/fields/rosco_set_support_model_a_accountTypes__c.field-meta.xml
<CustomField>
    <fullName>rosco_set_support_model_a_accountTypes__c</fullName>
    <label>rosco_set_support_model_a_accountTypes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>