objects/Case_Management__c/fields/rosco_sfdc_dom_c__c.field-meta.xml
<CustomField>
    <fullName>rosco_sfdc_dom_c__c</fullName>
    <label>rosco_sfdc_dom_c</label>
    <length>64</length>
    <type>Text</type>
</CustomField>