objects/Case_Management__c/fields/rosco_sfdc_dom_l__c.field-meta.xml
<CustomField>
    <fullName>rosco_sfdc_dom_l__c</fullName>
    <label>rosco_sfdc_dom_l</label>
    <length>64</length>
    <type>Text</type>
</CustomField>