objects/Case_Management__c/fields/rosco_slack_can__c.field-meta.xml
<CustomField>
    <fullName>rosco_slack_can__c</fullName>
    <label>rosco_slack_can</label>
    <length>10</length>
    <type>Text</type>
</CustomField>