objects/Case_Management__c/fields/rosco_slack_chat__c.field-meta.xml
<CustomField>
    <fullName>rosco_slack_chat__c</fullName>
    <label>rosco_slack_chat</label>
    <length>10</length>
    <type>Text</type>
</CustomField>