objects/Case_Management__c/fields/rosco_slack_chat_channel_supportcenter__c.field-meta.xml
<CustomField>
    <fullName>rosco_slack_chat_channel_supportcenter__c</fullName>
    <label>rosco_slack_chat_channel_supportcenter</label>
    <length>32</length>
    <type>Text</type>
</CustomField>