objects/Case_Management__c/fields/rosco_slack_exceptions__c.field-meta.xml
<CustomField>
    <fullName>rosco_slack_exceptions__c</fullName>
    <label>rosco_slack_exceptions</label>
    <length>10</length>
    <type>Text</type>
</CustomField>