objects/Case_Management__c/fields/rosco_slack_fedtriage__c.field-meta.xml
<CustomField>
    <fullName>rosco_slack_fedtriage__c</fullName>
    <label>rosco_slack_fedtriage</label>
    <length>32</length>
    <type>Text</type>
</CustomField>