objects/Case_Management__c/fields/rosco_slack_incoming_hook__c.field-meta.xml
<CustomField>
    <fullName>rosco_slack_incoming_hook__c</fullName>
    <label>rosco_slack_incoming_hook</label>
    <length>100</length>
    <type>Text</type>
</CustomField>