objects/Case_Management__c/fields/rosco_slack_techpartner_channel__c.field-meta.xml
<CustomField>
    <fullName>rosco_slack_techpartner_channel__c</fullName>
    <label>rosco_slack_techpartner_channel</label>
    <length>32</length>
    <type>Text</type>
</CustomField>