objects/Case_Management__c/fields/rosco_slack_triage_channel_poland__c.field-meta.xml
<CustomField>
    <fullName>rosco_slack_triage_channel_poland__c</fullName>
    <description>rosco_slack_triage_channel_poland</description>
    <label>rosco_slack_triage_channel_poland</label>
    <length>100</length>
    <type>Text</type>
</CustomField>