objects/Case_Management__c/fields/rosco_slack_triage_channel_sc_japan__c.field-meta.xml
<CustomField>
    <fullName>rosco_slack_triage_channel_sc_japan__c</fullName>
    <label>rosco_slack_triage_channel_sc_japan</label>
    <length>12</length>
    <type>Text</type>
</CustomField>