objects/Case_Management__c/fields/rosco_slackmap__c.field-meta.xml
<CustomField>
    <fullName>rosco_slackmap__c</fullName>
    <label>rosco_slackmap</label>
    <length>10</length>
    <type>Text</type>
</CustomField>