objects/Case_Management__c/fields/rosco_spam_textbody_re__c.field-meta.xml
<CustomField>
    <fullName>rosco_spam_textbody_re__c</fullName>
    <label>rosco_spam_textbody_re</label>
    <length>255</length>
    <type>Text</type>
</CustomField>