objects/Case_Management__c/fields/rosco_support_center_csat_japan_email__c.field-meta.xml
<CustomField>
    <fullName>rosco_support_center_csat_japan_email__c</fullName>
    <label>rosco_support_center_csat_(japan)_email</label>
    <length>64</length>
    <type>Text</type>
</CustomField>