objects/Case_Management__c/fields/rosco_sync_non_tanium_ccr__c.field-meta.xml
<CustomField>
    <fullName>rosco_sync_non_tanium_ccr__c</fullName>
    <label>rosco_sync_non_tanium_ccr</label>
    <length>10</length>
    <type>Text</type>
</CustomField>