objects/Case_Management__c/fields/rosco_tan_vuln_report_id__c.field-meta.xml
<CustomField>
    <fullName>rosco_tan_vuln_report_id__c</fullName>
    <label>rosco_tan_vuln_report_id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>