objects/Case_Management__c/fields/rosco_tanium_vulnerabilty_tool_auth__c.field-meta.xml
<CustomField>
    <fullName>rosco_tanium_vulnerabilty_tool_auth__c</fullName>
    <label>rosco_tanium_vulnerabilty_tool_auth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>