objects/Case_Management__c/fields/rosco_txt_afterhr_prem__c.field-meta.xml
<CustomField>
    <fullName>rosco_txt_afterhr_prem__c</fullName>
    <label>rosco_txt_afterhr_prem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>