objects/Case_Management__c/fields/rosco_txt_new_case__c.field-meta.xml
<CustomField>
    <fullName>rosco_txt_new_case__c</fullName>
    <label>rosco_txt_new_case</label>
    <length>255</length>
    <type>Text</type>
</CustomField>