objects/Case_Management__c/fields/rosco_txt_unauth_email__c.field-meta.xml
<CustomField>
    <fullName>rosco_txt_unauth_email__c</fullName>
    <label>rosco_txt_unauth_email</label>
    <length>10</length>
    <type>Text</type>
</CustomField>