objects/Case_Management__c/fields/rosco_txt_unauth_email_match__c.field-meta.xml
<CustomField>
    <fullName>rosco_txt_unauth_email_match__c</fullName>
    <label>rosco_txt_unauth_email_match</label>
    <length>255</length>
    <type>Text</type>
</CustomField>