objects/Case_Management__c/fields/Sales_Ops_Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Sales_Ops_Record_Type_Id__c</fullName>
    <description>Record type of the case Sales Ops record type Id for use in workflow, process builder and validation rules.</description>
    <label>Sales Ops Record Type Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>