objects/Case_Management__c/fields/Send_to_Account_Slack_Override__c.field-meta.xml
<CustomField>
    <fullName>Send_to_Account_Slack_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Toggle to activate the Send to Account Slack channel action for new cases.</description>
    <label>Send to Account Slack Override</label>
    <type>Checkbox</type>
</CustomField>