objects/Case_Management__c/fields/Support_Queue_ID__c.field-meta.xml
<CustomField>
    <fullName>Support_Queue_ID__c</fullName>
    <description>18 character Id of the support queue for use in process builder, actions, workflow and validations.</description>
    <label>Support Queue ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>